syntax = "proto3";
package checkmate;
option go_package = ".;checkmate";

enum ResourceType {
  PATH = 0;
  SOURCE = 1;
}

message Resource {
  string value = 1;
  ResourceType resource_type = 2;
}

message ScanRequest { repeated Resource resources = 2; }

service StaticAnalysisService {}

message PluginMetadata {
  // Plugin ID
  string id = 1;
  // Plugin display name
  string name = 2;
  // A display description
  string description = 3;
}

message Empty {}
service PluginService { rpc GetPluginMetadata(Empty) returns (PluginMetadata); }